--- a/A1Evo_MJ_Custom.html
+++ b/A1Evo_MJ_Custom.html
@@ -8967,6 +8967,22 @@ zip.file("_micCal.txt", micCal);
       }
       return [loDelay, hiDelay];
     }
+    async function sanityCheckSubTrims() {
+      // find sub bandwidth and use it to do a final level sanity check. limit to 20-120hz
+      const subLowFreq = await getLow3dBPoint(nChannels);
+      const subHighFreq = await getHigh3dBPoint(nChannels);
+      const start = Math.max(Math.round(subLowFreq), 20);
+      const end = Math.min(Math.round(subHighFreq), 120);
+      const volAdjust = parseFloat(await getTrim(nChannels, start, end, "Var"));
+      if (volAdjust != 0) {
+        console.warn("Adjusting subwoofer trim(s) to compensate for peaks/dips...");
+        await postNext('Add SPL offset', nChannels, { offset: volAdjust });
+        for (let i = nSpeakers + 1; i <= nSpeakers + nSubs; i++) {
+          customLevel[i] += volAdjust;
+          console.info(`${commandId[i].padStart(3, ".")} - shifted: ${customLevel[i] - volAdjust}dB → ${customLevel[i]}dB`);
+        }
+      }
+    }
     async function groundWorks() {
       let measurements = await fetch_mREW();
       let mCount = Object.keys(measurements).length;
@@ -9002,7 +9018,7 @@ zip.file("_micCal.txt", micCal);
         if (title[count].startsWith("SW")) { title[count] = title[count].slice(0, -6) + "o"; }
         // trim determination using MLP
         if (title[count].startsWith("SW")) {
-          customLevel[count] = bassMode === "Directional" ? await getTrim(i, 30, 80) : await getTrim(i, 20, 120);
+          customLevel[count] = await getTrim(i, 30, 80);
         }
         else {
           customLevel[count] = movieMode ? await getTrim(i, 250, 10000) : await getTrim(i, 250, 4000);
@@ -9066,6 +9082,7 @@ zip.file("_micCal.txt", micCal);
       const [loDelay, hiDelay] = getDelayRangeOfFinalSub();
       console.info(`Available bass system volume adjustment range → { ${subLoTrim}dB : ${subHiTrim}dB }`);
       console.info(`Total subwoofer 'delay headroom' available → ${(hiDelay-loDelay).toFixed(2)}ms`);
+      await sanityCheckSubTrims();
     }
     async function generateFilters() {
       console.log(`Generating EQ filters based on Min. Phase responses...`);
@@ -9247,15 +9264,15 @@ zip.file("_micCal.txt", micCal);
       // find low freq -3dB point & set minXO
       const subLowFreq = await getLow3dBPoint(mCount);
       minXO = findNearestXO(2 * subLowFreq);
-      Object.freeze(minXO);
       // find high freq -3dB point and set maxXO
       const subHighFreq = await getHigh3dBPoint(mCount);
       maxXO = findNearestXO(subHighFreq);
-      Object.freeze(maxXO);
-      if (minXO > maxXO) {
-        console.error("Failed to calculate subwoofer bandwidth!");
-        throw new Error;
+      if (minXO >= maxXO) {
+        minXO = maxXO;
+        console.warn(`Subwoofer has very little bandwidth and can only support ${minXO}hz crossover!`);
       }
+      Object.freeze(minXO);
+      Object.freeze(maxXO);
       console.info(`${commandId[nChannels].padStart(3, ".")} bandwidth: ${subLowFreq.toFixed(2)}hz - ${subHighFreq.toFixed(2)}hz → Usable XO range: ${minXO}hz - ${maxXO}hz`);
       sanityCheckInitialXO(); // update initialXOs based on subwoofer bandwidth
     }
@@ -9506,7 +9523,7 @@ zip.file("_micCal.txt", micCal);
         await postDelete(i);
       }
       await fetch_mREW(nChannels, 'PUT', { title: "SW1o" });
-      const volAdjust = parseFloat(await getTrim(nChannels, 20, 120));
+      const volAdjust = parseFloat(await getTrim(nChannels, 30, 80));
       if (volAdjust === 0) { return; } // nothing more to do
       await postNext('Add SPL offset', nChannels, { offset: volAdjust });
       console.log(`Adjusting combined sub level by ${volAdjust}dB to best follow the target curve...`);
@@ -9551,10 +9568,10 @@ zip.file("_micCal.txt", micCal);
       const meanOfSquares = sumOfSquares / arrayLength;
       return Math.sqrt(meanOfSquares);
     }
-    async function getTrim(idx, start, end) {
+    async function getTrim(idx, start, end, smoothing="Psy") {
       const targetArray = response2array(targetResponse, start, end);
       const targetSPL = targetArray.reduce((acc, val) => acc + val, 0) / targetArray.length;
-      const freqResponse = await fetchSafe('frequency-response?smoothing=Psy&ppo=96', idx);
+      const freqResponse = await fetchSafe(`frequency-response?smoothing=${smoothing}&ppo=96`, idx);
       const freqArray = response2array(freqResponse, start, end);
       const freqSPL = freqArray.reduce((acc, val) => acc + val, 0) / freqArray.length;
       const offset = targetSPL - freqSPL;
